--- a/css/screens/chatting.css
+++ b/css/screens/chatting.css
@@ -46,6 +46,7 @@
 .message-row {
   width: 100%;
   display: flex;
+  margin-bottom: 30px;
 }
 
 .message-row img {
@@ -83,4 +84,17 @@
 .message__time {
   font-size: 14px;
   opacity: 0.7;
+}
+
+.message-row__own {
+  justify-content: flex-end;
+}
+
+.message-row__own .message__bubble {
+  background-color: lightgray;
+  border-top-right-radius: 0px;
+  border-top-left-radius: 15px;
+  order: 1;
+  margin-right: 0;
+  margin-left: 10px;
 }
