--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 @import "screens/more.css";
 @import "screens/settings.css";
 @import "screens/chatting.css";
+@import "screens/profile.css";
 
 body {
   font-family: "Nunito", sans-serif;
