--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -1,5 +1,5 @@
 .alt-header {
-  margin-top: 50px;
+  margin-top: 30px;
   padding: var(--horizontal-space);
   display: flex;
   align-items: center;
@@ -7,7 +7,7 @@
 }
 
 .alt-header__title {
-  font-size: var(--font-medium_large);
+  font-size: 25px;
   font-weight: var(--weight-bold);
 }
 
@@ -27,6 +27,10 @@
   margin-left: auto;
   display: flex;
   justify-content: flex-end;
+}
+
+.alt-header__column i {
+  font-size: 20px;
 }
 
 .alt-header__column span:last-child {
