--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -1,20 +1,22 @@
 .icon-row {
   display: flex;
   justify-content: space-between;
-  padding: 0 30px;
+  padding: 0 20px;
 }
 
 .icon-row__icons {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 30px;
+  width: 20%;
 }
 
 .icon-row__icons i {
-  font-size: 40px;
+  font-size: 35px;
 }
 
 .icon-row__icons span {
+  font-size: 14px;
   margin-top: 20px;
+  text-align: center;
 }
