--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,17 +1,18 @@
 .screen-header {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-top: 45px;
   padding: var(--horizontal-space);
 }
 
 .screen-header__title {
-  font-size: var(--font-medium_large);
+  font-size: 28px;
   font-weight: var(--weight-bold);
 }
 
 .screen-header__icons {
   position: relative;
+  font-size: 20px;
 }
 
 .screen-header__icons span {
@@ -19,5 +20,5 @@
 }
 
 .chat-header {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
