--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -9,41 +9,41 @@
   align-items: center;
 }
 
+.user-component__column i {
+  font-size: 30px;
+}
 .user-component__avatar {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   border-radius: 25px;
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 25px;
-  -ms-border-radius: 25px;
-  -o-border-radius: 25px;
+  -webkit-border-radius: 25px;
   margin-right: 20px;
 }
 
 .user-component__avatar--xl {
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
 }
 
 .user-component__avatar--sm {
   width: 60px;
   height: 60px;
-  border-radius: 25px;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  -ms-border-radius: 25px;
-  -o-border-radius: 25px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 .user-component__user-name {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: var(--weight-bold);
 }
 
 .user-component__state {
   margin-top: 5px;
   opacity: 0.6;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .user-component__user-name--notbold {
@@ -58,4 +58,5 @@
 }
 .user-component__time {
   margin-bottom: 10px;
+  font-size: 14px;
 }
