--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,12 +1,12 @@
 .recommended-friends {
   border-top: var(--border-line);
   border-bottom: var(--border-line);
-  padding: 30px 20px;
-  margin: 20px 0;
+  padding: 20px 10px;
+  margin-top: 20px;
 }
 
 .recommended-friends__title {
-  font-size: 18px;
+  font-size: 16px;
   opacity: 0.8;
 }
 
@@ -15,7 +15,7 @@
   display: block;
   text-align: center;
   color: var(--color-light_gray);
-  font-size: 18px;
+  font-size: 14px;
   opacity: 0.8;
 }
 
@@ -27,16 +27,21 @@
 .open-chat__header {
   display: flex;
   justify-content: space-between;
-  padding: 30px 0 30px 20px;
+  padding: 20px 0 0 10px;
 }
 
 .open-chat__header h4 {
-  font-size: 18px;
+  font-size: 16px;
   opacity: 0.8;
 }
 
 .open-chat__header span {
   color: var(--color-light_gray);
+  font-size: 14px;
+}
+
+.open-chat__header i {
+  font-size: 12px;
 }
 
 .open-post {
@@ -51,7 +56,7 @@
 }
 
 .open-post__column:first-child {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: var(--weight-bold);
 }
 
@@ -62,13 +67,12 @@
 .open-post__column__status {
   display: flex;
   align-items: center;
-  margin-top: 10px;
 }
 
 .open-post__column__status span {
   padding-left: 7px;
   color: var(--color-light_gray);
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .open-post__column__status span:last-child {
@@ -86,8 +90,8 @@
 }
 
 .open_post__column img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -96,7 +100,7 @@
 }
 
 .open-post__column__hash {
-  font-size: 20px;
+  font-size: 16px;
   color: var(--color-light_gray);
   margin-bottom: 10px;
 }
