--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -8,12 +8,12 @@
 }
 
 .welcome-header__title {
-  margin-bottom: 20px;
-  font-size: var(--font-medium_large);
+  margin-bottom: 25px;
+  font-size: 24px;
 }
 
 .welcome-header__text {
-  font-size: var(--font-regular);
+  font-size: 16px;
   width: 70%;
   opacity: 0.7;
 }
@@ -27,7 +27,7 @@
 .login-form input {
   border: none;
   padding: 15px 0;
-  font-size: var(--font-regular);
+  font-size: 16px;
   margin-bottom: 25px;
 }
 
@@ -72,4 +72,5 @@
 
 .login-form a {
   text-align: center;
+  font-size: 14px;
 }
