--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -27,8 +27,70 @@
   position: absolute;
   bottom: 15px;
   left: 15px;
+  animation: noti;
+  -webkit-animation: notificationAnimation 2s ease-in-out infinite;
 }
 
 .navbar__btn i {
   font-size: 27px;
+}
+
+.navbar__btn {
+  transform: translateY(70px);
+  -webkit-transform: translateY(70px);
+  -moz-transform: translateY(70px);
+  -ms-transform: translateY(70px);
+  -o-transform: translateY(70px);
+  animation: appearBtnAnimation 0.5s ease-in-out forwards;
+  -webkit-animation: appearBtnAnimation 0.5s ease-in-out forwards;
+}
+
+.navbar__btn:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.navbar__btn:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.navbar__btn:last-child {
+  animation-delay: 0.9s;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+    opacity: 1;
+  }
+}
+
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(180deg);
+    -webkit-transform: translateY(-5px) rotateY(180deg);
+    -moz-transform: translateY(-5px) rotateY(180deg);
+    -ms-transform: translateY(-5px) rotateY(180deg);
+    -o-transform: translateY(-5px) rotateY(180deg);
+  }
+  100% {
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+  }
 }
