--- a/css/screens/chatting.css
+++ b/css/screens/chatting.css
@@ -20,11 +20,33 @@
   align-items: flex-start;
 }
 
+@keyframes fadeIn {
+  from {
+    transform: translateY(30px);
+    opacity: 0;
+    -webkit-transform: translateY(30px);
+    -moz-transform: translateY(30px);
+    -ms-transform: translateY(30px);
+    -o-transform: translateY(30px);
+  }
+
+  to {
+    transform: none;
+    opacity: 1;
+    -webkit-transform: none;
+    -moz-transform: none;
+    -ms-transform: none;
+    -o-transform: none;
+  }
+}
+
 .main-chat {
-  margin-top: 130px;
+  margin-top: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn 0.6s linear;
+  -webkit-animation: fadeIn 0.6s linear;
 }
 
 .chatting__timestamp {
