--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -68,5 +68,6 @@
   font-size: 100px;
   color: ivory;
   animation: hideSplashscreen;
-  -webkit-animation: hideSplashscreen 1.5s ease-in-out forwards;
+  -webkit-animation: hideSplashscreen 0.5s ease-in-out forwards;
+  animation-delay: 0.5s;
 }
