--- a/css/screens/media-query.css
+++ b/css/screens/media-query.css
@@ -50,6 +50,11 @@
   .user-component__column i {
     font-size: 20px;
   }
+
+  .more-suggestions {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
   .more-suggestions__item img {
     width: 50px;
     height: 50px;
