--- a/css/screens/media-query.css
+++ b/css/screens/media-query.css
@@ -51,10 +51,6 @@
     font-size: 20px;
   }
 
-  .more-suggestions {
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-  }
   .more-suggestions__item img {
     width: 50px;
     height: 50px;
@@ -102,5 +98,11 @@
   .chatting__timestamp {
     width: 250px;
     font-size: 14px;
+  }
+
+  .more-screen,
+  .find-screen {
+    height: 150vh;
+    overflow: auto;
   }
 }
